--- a/src/HTMLCompare.html
+++ b/src/HTMLCompare.html
@@ -1,17 +1,45 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="http://code.jquery.com/jquery-1.10.2.min.js" />
-		<script type="text/javascript">
+		<meta charset="UTF-8"> 
+		<script src="http://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
+		<script>
+
+			function checkSubmitForm(form) {
+
+				var frameOne = $("#frameOne");
+				frameOne.attr({src : 'Examples/'+form.fileOne.value});
+				var frameTwo = $("#frameTwo");
+				frameTwo.attr({src : 'Examples/'+form.fileTwo.value});
+				
+				setTimeout(function() {
+					alert(frameOne.contents().find('p').text());
+					alert(frameTwo.contents().find('h1').text());
+				}, 100);
+			
+				
+			}
 
 
 		</script>
 	</head>
-<body>
+	<body>
 
-<h1>My First Heading</h1>
+		<iframe id="frameOne">
+		</iframe>
 
-<p>My first paragraph.</p>
+		<iframe id="frameTwo">
+		</iframe>
 
-</body>
+		<div id="content">
+
+		</div>
+
+		<form id="compareFileForm" onsubmit="checkSubmitForm(this); return false;">
+			<input name="fileOne" type="file" />
+			<input name="fileTwo" type="file" />
+			<input type="submit" />
+		</form>
+
+	</body>
 </html>
