--- a/src/Examples/example1.html
+++ b/src/Examples/example1.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="UTF-8"> 
+		
+	</head>
 <body>
 
-<h1>My First Heading</h1>
+<div>
+	<br />
+	<p>My First Heading</p>
+</div>
 
 <p>My first paragraph.</p>
 
