--- a/src/htmlCompare.html
+++ b/src/htmlCompare.html
@@ -5,27 +5,54 @@
 		<script src="http://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
 		<script>
 
+			var frameOneArray = new Array();
+			var frameTwoArray = new Array();
+
+			function DOMelement (element) {
+
+				this.tagName = element.tagName;
+				this.content = element.innerHTML;
+				this.posLeft = element.offsetLeft;
+				this.posTop = element.offsetTop;
+				this.children = element.children;
+				this.parent = element.parentNode;
+
+			}
+
 			function checkSubmitForm(form) {
 
 				var frameOne = $("#frameOne");
 				frameOne.attr({src : 'Examples/'+form.fileOne.value});
-				var frameTwo = $("#frameTwo");
-				frameTwo.attr({src : 'Examples/'+form.fileTwo.value});
+			
+			//	var frameTwo = $("#frameTwo");
+			//	frameTwo.attr({src : 'Examples/'+form.fileTwo.value});
 				
 				setTimeout(function() {
 				//	alert(frameOne.contents().find("body"));
 				//	alert(frameTwo.contents().find("body"));
 					traverseDOM(frameOne.contents().find("body").get(0));
-				//	traverseDOM(frameOne.contents().find("body"));
+				//	traverseDOM(frameTwo.contents().find("body").get(0));
+
+
+					for (var i = 0; i < frameOneArray.length; i++) {
+						var str = ""
+						str += frameOneArray[i].tagName + "\n\n";
+						str += frameOneArray[i].content + "\n\n";
+						str += frameOneArray[i].posLeft + ", " + frameOneArray[i].posTop + "\n\n";
+						alert(str);
+					}	
 				}, 1000);
 				
+			
 			}
 
-			function traverseDOM(element) {
-				var element = element;
-				var elementPosition = element.getBoundingClientRect();
-				alert(elementPosition.left + ", " + elementPosition.top);
-				alert(element.innerHTML);
+			function traverseDOM(paramElement) {
+				var element = new DOMelement(paramElement);
+			//	alert(element.posLeft + ", " + element.posTop);
+			//	alert(element.tagName + "\n" + element.content + "/" + element.tagName);
+			
+				frameOneArray.push(element);
+
 				var childrenList = element.children;
 				for (var i = 0; i < childrenList.length; i++) {
 					traverseDOM(childrenList[i]);
