More info on DOMelement. Hash to store elements.

--- a/src/Examples/example3.html
+++ b/src/Examples/example3.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
+	<body>
 
-<p style="font-family:verdana;font-size:110%;color:green">
-This is a paragraph with some text in it. This is a paragraph with some text in it. This is a paragraph with some text in it. This is a paragraph with some text in it.
-</p>
+		<p id="example3_P" style="font-family:verdana;font-size:110%;color:green">
+			This is a paragraph with some text in it. This is a paragraph with some text in it. This is a paragraph with some text in it. This is a paragraph with some text in it.
+		</p>
 
-</body>
+	</body>
 </html>
