Style Comparison needs work.

--- a/src/Examples/example1.html
+++ b/src/Examples/example1.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8"> 
-		
+		<title> HELLO </title>
+		<meta charset="UTF-8" /> 
+		<style>
+			p {
+				color : blue;
+
+			}
+		</style>
 	</head>
-<body>
+	<body>
 
-<div>
-	<br />
-	<h2>My First Heading</h2>
-</div>
+		<div>
+			<br />
+			<h2>My First Heading</h2>
+		</div>
 
-<p>My first paragraph.</p>
+		<p id="para1">My first paragraph.</p>
 
-</body>
+	</body>
 </html>
