--- a/src/Examples/example4.html
+++ b/src/Examples/example4.html
@@ -8,10 +8,11 @@
 
 <div>
 	<br />
+	<br />
 	<h2>First H2 H2 My</h2>
 </div>
 
-<p>My first paragraph.</p>
+<p><p>My first paragraph.</p></p>
 
 </body>
 </html>
